// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PastGamesPopularityPage component > to render graph of theme popularity previous games 1`] = `
<DocumentFragment>
  <div
    class=""
    id="games-page"
  >
    <div
      class="vert-popularity-graph"
      data-testid="vert-popularity-graph"
    >
      <button
        class="btn btn-light rotate-icon"
        data-testid="rotate-button"
      >
         
      </button>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(255, 0, 0);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(255, 0, 0);"
        >
          Pot Luck
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 100%; background-color: rgb(0, 128, 0);"
          >
            2
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(0, 128, 0);"
        >
          Rock
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(0, 239, 239);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(0, 239, 239);"
        >
          Various Artists
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(128, 128, 0);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(128, 128, 0);"
        >
          Rock & Power Ballads
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(191, 191, 0);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(191, 191, 0);"
        >
          Motown
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(128, 128, 128);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(128, 128, 128);"
        >
          sunshine
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(0, 128, 128);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(0, 128, 128);"
        >
          Pride
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PastGamesPopularityPage component to render graph of theme popularity previous games 1`] = `
<DocumentFragment>
  <div
    class=""
    id="games-page"
  >
    <div
      class="action-panel"
    >
      <button
        class="btn btn-primary"
      >
        Reload
      </button>
      <button
        class="btn btn-primary ml-2"
      >
        Import Game
      </button>
    </div>
    <div
      class="past-games-buttons"
    >
      <div
        class="row mb-4 page-popularity"
      >
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle popularity-button"
            href="/history"
          >
            <h4>
              Theme Popularity
            </h4>
          </a>
        </div>
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle usage-button"
            href="/history/themes"
          >
            <h4>
              Theme Last Usage
            </h4>
          </a>
        </div>
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle calendar-button"
            href="/history/calendar"
          >
            <h4>
              Games Calendar
            </h4>
          </a>
        </div>
        <div
          class="col text-center"
        >
          <a
            class="btn btn-lg btn-light border border-dark-subtle all-button"
            href="/history/games"
          >
            <h4>
              All Games
            </h4>
          </a>
        </div>
      </div>
    </div>
    <div
      class="vert-popularity-graph"
      data-testid="vert-popularity-graph"
    >
      <button
        class="btn btn-light rotate-icon"
        data-testid="rotate-button"
      >
         
      </button>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(255, 0, 0);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(255, 0, 0);"
        >
          Pot Luck
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 100%; background-color: rgb(0, 128, 0);"
          >
            2
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(0, 128, 0);"
        >
          Rock
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(0, 239, 239);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(0, 239, 239);"
        >
          Various Artists
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(128, 128, 0);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(128, 128, 0);"
        >
          Rock & Power Ballads
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(191, 191, 0);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(191, 191, 0);"
        >
          Motown
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(128, 128, 128);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(128, 128, 128);"
        >
          sunshine
        </div>
      </div>
      <div
        class="theme"
        style="font-size: 1em;"
      >
        <div
          class="bar-wrap"
        >
          <div
            class="bar"
            style="height: 50%; background-color: rgb(0, 128, 128);"
          >
            1
          </div>
        </div>
        <div
          class="name"
          style="color: rgb(0, 128, 128);"
        >
          Pride
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
